<resources>
    <string name="app_name">Pets</string>

    <string name="signup">注册</string>
    <string name="signin">登录</string>
    <string name="oauth_signin">第三方登录</string>

    <string name="home">主页</string>
    <string name="found">探索</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>

    <string name="title_activity_mine">MineActivity</string>
    <string name="pet">宠物</string>
    <string name="pet_friend">宠友</string>
    <string name="follow">关注</string>
    <string name="fan">粉丝</string>
    <string name="check_in">每日签到</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="feedback">用户反馈</string>
    <string name="about_us">关于我们</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
