<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.marekchen.pets.fragment.MineFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mine_background" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:paddingTop="30dp">

        <ImageButton
            android:id="@+id/mine_setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mine_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_below="@id/mine_setting"
            android:layout_centerHorizontal="true"
            android:src="@drawable/avatar_default"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/mine_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mine_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="殷萍是大坏蛋"
            android:textColor="@android:color/white"
            android:textSize="@dimen/mine_name_text_size" />

        <TextView
            android:id="@+id/mine_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mine_nickname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="殷萍很懒什么都没写~~"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mine_description"
            android:layout_marginTop="15dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pet_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="20"
                    android:textColor="@color/mineNumColor"
                    android:textSize="@dimen/mine_num_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pet_num"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pet"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/mine_num_title_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pet_friend_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="20"
                    android:textColor="@color/mineNumColor"
                    android:textSize="@dimen/mine_num_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/pet_friend_num"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pet_friend"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/mine_num_title_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/follow_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="20"
                    android:textColor="@color/mineNumColor"
                    android:textSize="@dimen/mine_num_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/follow_num"
                    android:layout_centerHorizontal="true"
                    android:text="@string/follow"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/mine_num_title_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/fan_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="20"
                    android:textColor="@color/mineNumColor"
                    android:textSize="@dimen/mine_num_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fan_num"
                    android:layout_centerHorizontal="true"
                    android:text="@string/fan"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/mine_num_title_text_size" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/check_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/check_in_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mine_item_margin_left"
            android:layout_toEndOf="@id/check_in_icon"
            android:text="@string/check_in"
            android:textColor="@color/mineItemTextColor"
            android:textSize="@dimen/mine_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/mine_item_margin_lr"
        android:layout_marginRight="@dimen/mine_item_margin_lr"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        android:background="@color/mineDividerColor"
        app:layout_constraintTop_toBottomOf="@id/check_in_layout" />

    <RelativeLayout
        android:id="@+id/mine_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        app:layout_constraintTop_toBottomOf="@id/divider1">

        <ImageView
            android:id="@+id/mine_message_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mine_item_margin_left"
            android:layout_toEndOf="@id/mine_message_icon"
            android:text="@string/mine_message"
            android:textColor="@color/mineItemTextColor"
            android:textSize="@dimen/mine_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/mine_item_margin_lr"
        android:layout_marginRight="@dimen/mine_item_margin_lr"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        android:background="@color/mineDividerColor"
        app:layout_constraintTop_toBottomOf="@id/mine_message_layout" />

    <RelativeLayout
        android:id="@+id/mine_favorite_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <ImageView
            android:id="@+id/mine_favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mine_item_margin_left"
            android:layout_toEndOf="@id/mine_favorite_icon"
            android:text="@string/mine_favorite"
            android:textColor="@color/mineItemTextColor"
            android:textSize="@dimen/mine_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/mine_item_margin_lr"
        android:layout_marginRight="@dimen/mine_item_margin_lr"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        android:background="@color/mineDividerColor"
        app:layout_constraintTop_toBottomOf="@id/mine_favorite_layout" />

    <RelativeLayout
        android:id="@+id/feedback_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3">

        <ImageView
            android:id="@+id/feedback_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mine_item_margin_left"
            android:layout_toEndOf="@id/feedback_icon"
            android:text="@string/feedback"
            android:textColor="@color/mineItemTextColor"
            android:textSize="@dimen/mine_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/mine_item_margin_lr"
        android:layout_marginRight="@dimen/mine_item_margin_lr"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        android:background="@color/mineDividerColor"
        app:layout_constraintTop_toBottomOf="@id/feedback_layout" />

    <RelativeLayout
        android:id="@+id/about_us_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/mine_item_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4">

        <ImageView
            android:id="@+id/about_us_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mine_item_margin_left"
            android:layout_toEndOf="@id/about_us_icon"
            android:text="@string/about_us"
            android:textColor="@color/mineItemTextColor"
            android:textSize="@dimen/mine_item_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
